<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">One Love</string>
    <string name="foreground_icon">foreground_icon</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">SIGN UP</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="login">SIGN IN</string>
    <string name="user_full_name">Full Name</string>
    <string name="user_user_name">Username</string>
    <string name="user_location">Location</string>
    <string name="user_age">Age</string>
    <string name="user_agepref">Age Preference</string>
...
    <string name="recent_100_tweets_can_be_fetched_by_entering_your_twitter_user_name_and_press_fetch_tweet_then_you_can_simply_check_personality_type">Recent 100 tweets can be fetched by entering your twitter user name and press fetch tweet. Then you can simply check personality type</string>
    <string name="fetch_tweets">Fetch Tweets</string>
    <string name="like_estp_0_enfj_0_isfj_0_intj_0_infj_0">Like : ESTP = 0% ENFJ = 0% ISFJ = 0% INTJ = 0% INFJ = 0%</string>
    <string name="top_6_personality">Top 6 personality</string>
    <string name="check_your_personality">Check Your Personality</string>
    <string name="enter_your_twitter_username_and_check_personality_below">Enter your twitter username and check personality below</string>
    <string name="check_personality">Check personality</string>
    <string name="finger_print_icon">finger print icon</string>
    <string name="star">star</string>
    <string name="no_match_found">No Match Found!</string>
    <string name="match_list_will_be_when_you_got_liked_by_the_person_you_like">No match to chat! Matches are listed if two users like each other! Keep Searching your best! </string>
    <string name="match_list">Match List</string>
    <string name="tab">tab</string>
    <string name="home_view">home view</string>

</resources>
