...
        android:gravity="center_horizontal|center_vertical"
        android:hint="Confirm Password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColor="@color/windowBackground"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_password" />

    <EditText
        android:id="@+id/enter_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:hint="Enter Full Name"
        android:imeOptions="actionDone"
        android:backgroundTint="@color/white"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/enterEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_note"
        app:layout_constraintVertical_bias="0.831"
        android:autofillHints="" />
...
