...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraintLayout"
    android:background="@color/green_darkest"
    tools:context=".view.authentication.login.Login">
        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="login"
...
            android:background="@drawable/button"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/forgotPassword_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterPassword"
            tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
