...
                android:layout_marginBottom="30dp"
                android:scaleType="fitXY"
                android:src="@drawable/place_holder_profile"
                android:foreground="@drawable/gradient_bg"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toTopOf="@+id/rejectBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageButton
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/chat_btn_id"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/acceptBtn"
                android:layout_width="60dp"
                android:layout_height="60dp"

                android:background="@drawable/check_background_round"
                android:src="@drawable/ic_check"
                app:layout_constraintBottom_toBottomOf="parent"
...
